bdr.BDR2.scala.error
Erreur de compilation :
BDR2:3: error: value avance is not a member of Unit
    case "R" => droite() avance();
                         ^BDR2:4: error: value avance is not a member of Unit
    case "L" => gauche() avance();
                         ^BDR2:5: error: value droite is not a member of Unit
    case "I" => droite() droite() avance();
                         ^BDR2:7: error: too many arguments for method droite: ()Unit
    case "B" => droite(2) 
                      ^BDR2:8: error: too many arguments for method droite: ()Unit
    case "C" => droite(3) 
                      ^BDR2:9: error: too many arguments for method droite: ()Unit
    case "D" => droite(4)
                      ^BDR2:10: error: too many arguments for method droite: ()Unit
    case "E" => droite(5) 
                      ^BDR2:11: error: too many arguments for method droite: ()Unit
    case "F" => droite(6) 
                      ^