bdr.BDR2.scala.code
while (estSurMessage()){
  litMessage() match {
    case "R" => droite() avance();
    case "L" => gauche() avance();
    case "I" => droite() droite() avance();
    case "A" => avance()
    case "B" => droite(2) 
    case "C" => droite(3) 
    case "D" => droite(4)
    case "E" => droite(5) 
    case "F" => droite(6) 
    case "Z" => recule() 
    case "Y" => recule(2)
    case "X" => recule(3)
    case "W" => recule(4)
    case "V" => recule(5) 
    case "U" => recule(6)
  }
}